# SmarterBuaa

./: .gitignore  Cargo.toml  Dioxus.toml  Justfile  README.md  Release.md  build.rs
.github/workflows/: build.yml
assets/: AndroidManifest.xml  build.gradle.kts
assets/css/: base.css  login-page.css  login.css
src/: app.rs  config.rs  main.rs
src/config/: desktop.rs  mod.rs
src/ui/: dashboard.rs  login.rs  mod.rs  schedule.rs
